--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1"
+    "@reduxjs/toolkit": "^2.6.1",
+    "pinia": "^3.0.1"
   }
 }
