chore: 在 package.json 和 package-lock.json 中添加 zustand 依赖项，并更新构建脚本以包含准备步骤

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "prepare": "npm run build"
   },
   "keywords": [
     "broadcast-channel",
@@ -36,6 +37,7 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
-    "pinia": "^3.0.1"
+    "pinia": "^3.0.1",
+    "zustand": "^5.0.3"
   }
 }
