--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
       "require": "./dist/index.cjs"
     }
   },
+  "homepage": "https://github.com/leaf0412/broadcast-channel-state-sync",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leaf0412/broadcast-channel-state-sync.git"
+  },
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "prepare": "npm run build"
